--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "core-js": "^3.6.4",
     "moment": "^2.24.0",
     "vue": "^2.6.11",
+    "vue-image-chooser": "^0.5.13",
     "vue-router": "^3.1.5",
+    "vue-toast-notification": "0.0.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
