--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.24.0",
     "vue": "^2.6.11",
     "vue-image-chooser": "^0.5.13",
+    "vue-loading-overlay": "^3.3.0",
     "vue-router": "^3.1.5",
     "vue-toast-notification": "0.0.3",
     "vuex": "^3.1.2"
