--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-image-chooser": "^0.5.13",
     "vue-loading-overlay": "^3.3.0",
     "vue-router": "^3.1.5",
+    "vue-socket.io": "^3.0.7",
     "vue-toast-notification": "0.0.3",
     "vuex": "^3.1.2"
   },
